--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
     - uses: actions/setup-go@v2
       with:
         go-version: ${{ matrix.go-version }}
-    - run: make checkfmt
+    - run: make check-fmt
     - run: make vet
     - run: go install honnef.co/go/tools/cmd/staticcheck@latest
     - run: make staticcheck
