--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,20 @@ jobs:
     - uses: actions/setup-go@v2
       with:
         go-version: ${{ matrix.go-version }}
+    
+    - uses: oven-sh/setup-bun@v1
+      with:
+        bun-version: latest
+
+    - name: Build frontend
+      run: |
+        cd web
+        bun install
+        bun run build
+        cd ..
+        mkdir -p cmd/server/dist
+        cp -rv web/dist/* cmd/server/dist/
+    
     - run: make build
 
   qa:
