ci: remove unknown goreleaser flag

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -26,6 +26,6 @@ jobs:
         uses: goreleaser/goreleaser-action@v2
         with:
           version: 'latest'
-          args: release --debug
+          args: release
         env:
           GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
