ci: change windows release archive format

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,3 +34,9 @@ changelog:
       - '^docs:'
       - '^test:'
       - '^ci:'
+
+archives:
+  - format: tar.gz
+    format_overrides:
+      - goos: windows
+        format: zip
